# the-website

./: .gitignore  .pre-commit-config.yaml  Google_Auth_Integration_Plan.md  PRE_COMMIT_SETUP.md  README.md  WEBSOCKET_NOTIFICATIONS.md  backend_run.sh  frontend_run.sh  middleware.ts  next.config.mjs  ngrok_start.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts  test.py  vercel.json
.cursor/: settings.json
.next/: app-build-manifest.json  trace
api/: __init__.py  app.py  example.db  exceptions.py  index.py  (+1 more)
backend/: .coveragerc  .env.example  migrate_email_confirmation.py  pyproject.toml  pytest.ini  requirements.txt  test_stripe.py
backend/api/: __init__.py  config.py  exceptions.py  index.py  startup_email.py
backend/api/auth/: __init__.py  auth_interface.py  auth_service.py  models.py
backend/api/common/: __init__.py  constants.py  models.py  utils.py
backend/api/logic/: __init__.py  assignment_logic.py  auth_logic.py  chat_logic.py  client_logic.py  course_logic.py  filter_logic.py  logic.py  payment_logic.py  sort_logic.py  tutor_logic.py  user_logic.py
backend/api/router/: __init__.py  assignment.py  auth.py  auth_utils.py  chat.py  client.py  course.py  me.py  mock.py  models.py  payment.py  reviews.py  routers.py  tutor.py  user.py  websocket.py
backend/api/services/: __init__.py  content_filter_service.py  content_filter_service.py.old  content_filter_service_regex.py  email_service.py  social_media_filter.py
backend/api/services/data/: road_names.csv
backend/api/storage/: __init__.py  connection.py  models.py  object_storage.py  populate.py  seed.py  serialization.py  storage_interface.py  storage_service.py  validate.py
backend/api/templates/: email_confirmation.html  reset_password.html  unread_message.html
backend/migrations/: env.py
backend/migrations/versions/: c3bf7a0349b1_add_gender_field_to_users.py  f63c351e24a8_initial_migration.py
backend/scripts/: README.md  build.sh  export-requirements.sh  export_requirements.sh  format_python.sh  init_db.sh  run_precommit.sh  run_tests.sh  run_tests_fast.sh  run_tests_verbose.sh  start.sh
backend/test/: __init__.py
backend/test/api/auth/: test_auth_service.py  test_email_confirmation.py
backend/test/api/storage/: test_storage_service.py
backend/tests/: README.md  conftest.py  test_basic.py
backend/tests/auth/: test_auth_service.py
backend/tests/common/: __init__.py  test_constants.py  test_exceptions.py  test_utils.py  test_utils_validation.py
backend/tests/core/: test_config.py  test_index.py
backend/tests/logic/: __init__.py  test_assignment_logic.py  test_assignment_logic_simple.py  test_auth_logic.py  test_auth_logic_simple.py  test_chat_logic_mockable.py  test_course_logic.py  test_filter_logic.py  test_payment_logic.py  test_payment_logic_extended.py  test_sort_logic.py  test_tutor_logic.py  test_user_logic.py
backend/tests/router/: __init__.py  test_auth.py  test_auth_utils.py  test_chat.py  test_course.py  test_models.py  test_payment.py  test_reviews.py  test_websocket.py
backend/tests/services/: test_content_filter_service.py  test_content_filter_with_social_media.py  test_email_service.py  test_social_media_filter.py  test_startup_email.py
backend/tests/storage/: __init__.py  test_models.py  test_populate.py  test_seed.py  test_storage_service.py
(+624 files in other folders)
